changes of links

--- a/Index.html
+++ b/Index.html
@@ -13,9 +13,9 @@
         <tbody>
             <tr>
                 <td class="col-name">
-                    <h4><a title="Link to kooboo content folder" href="Item.html">All sections to import</a></h4>
-                    <a class="icon-folder" title="Link to kooboo content folder" href="Item.html"> Open Sections</a>
-                    <a class="icon-file" title="Link to kooboo content folder" href="Item.html"> Read loggfile</a>
+                    <h4><a title="Edit the the import" href="Item.html">All sections to import</a></h4>
+                    <a class="icon-folder" title="Kooboo content folder, Open Sections" href="Item.html"> Open Sections</a>
+                    <a class="icon-file" title="All loggs of this import." href="Item.html"> Read loggfile</a>
                 </td>
                 <td>
                     <strong class="icon-clock"> Time 22:00:00</strong>
