--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,19 @@
                     <a class="icon-file" title="All loggs of this import." href="GUID-ProductSections.txt" target="_blank"> Read loggfile</a>
                 </td>
                 <td>
-                    <strong class="icon-clock"> Time 22:00:00</strong>
+                    
+                </td>
+                <td>
+					<strong class="icon-clock"> Time 22:00:00</strong>
+                </td>
+            </tr>
+			<tr>
+                <td class="col-name">
+                    <h4><a title="Edit the the import" href="Item.html">All attributes to import</a></h4>
+                    <a class="icon-folder" title="Kooboo content folder, Open Attributes" href="Item.html"> Open Attributes</a>
+                    <a class="icon-file" title="All loggs of this import." href="GUID-ProductSections.txt" target="_blank"> Read loggfile</a>
+                </td>
+                <td>
                 </td>
                 <td>
                     <form>
@@ -33,7 +45,6 @@
                     <a class="icon-file" title="Link to kooboo content folder" href="/"> Read loggfile</a>
                 </td>
                 <td>
-                    <strong class="icon-stopwatch timer-when"> Every 15 minutes</strong>
                     <div class="progress-wrapper">
                         <progress max="100" value="80"></progress>
                         <span class="icon-download"> Imported 177/3498 80%</span>
@@ -42,6 +53,7 @@
                 </td>
                 <td>
                     <form>
+					<strong class="icon-stopwatch timer-when"> Every 15 minutes</strong>
                         <button class="icon-stop status-stop"> Stop</button>
                     </form>
                 </td>
